--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -25,6 +25,8 @@ $large-screen-cutoff: 1400px;
 $large-screen-max-width: 1200px;
 $default-max-width: 1000px;
 
+$header-height: 60px;
+
 /* Mixins */
 
 @mixin codetext {
